Fix gap-0 for grid

--- a/_source/assets/css/_utilities/flex.css
+++ b/_source/assets/css/_utilities/flex.css
@@ -32,7 +32,7 @@ flex: simple sub-layouts
 .column { flex-direction: column; }
 
 @media (--sm) {
-  .gap-none\@sm { gap: 0; }
+  .gap-0\@sm { gap: 0; }
   .gap-sm\@sm { gap: var(--space-sm); }
   .gap-md\@sm { gap: var(--space-md); }
   .gap-lg\@sm { gap: var(--space-lg); }
@@ -41,7 +41,7 @@ flex: simple sub-layouts
 }
 
 @media (--md) {
-  .gap-none\@md { gap: 0; }
+  .gap-0\@md { gap: 0; }
   .gap-sm\@md { gap: var(--space-sm); }
   .gap-md\@md { gap: var(--space-md); }
   .gap-lg\@md { gap: var(--space-lg); }
